impove access control app

--- a/templates/access_management/registration.html
+++ b/templates/access_management/registration.html
@@ -4,15 +4,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign up</title>
+    <title>Регистрация</title>
     {% comment %} <link rel="stylesheet" href="{% static "registration.css"
     %}}"> {% endcomment %}
   </head>
   <body>
     <form action="" method="POST">
-      <h1 class="registration-form-title">Sign Up</h1>
+      <h1 class="registration-form-title">Регистрация</h1>
       {% csrf_token %} {{form}}
-      <button type="submit">Sign Up</button>
+      <button type="submit">Регистрироваться</button>
     </form>
   </body>
 </html>
