--- a/templates/tables/tables.html
+++ b/templates/tables/tables.html
@@ -19,22 +19,21 @@
     </style>
   </head>
   <body>
-    <h1>Отфильтрованные столы</h1>
+    <h1>Tables</h1>
 
     <form method="GET" action="{% url 'tables' %}">
       {{ form.as_p }}
-      <button type="submit">Применить фильтр</button>
+      <button type="submit">filter</button>
     </form>
 
     {% if tables %}
-    <h2>Результаты:</h2>
     <div class="table-cards">
       {% for table in tables %}
       <div class="table-card" onclick="redirectToReserved({{ table.id }})">
         <img src="{{ table.photo.url }}" alt="Table Photo" />
-        <p>Номер стола: {{ table.table_number }}</p>
-        <p>Цена: {{ table.price }}</p>
-        <p>Тип: {{ table.get_type_display }}</p>
+        <p>Table number: {{ table.table_number }}</p>
+        <p>Price: {{ table.price }}</p>
+        <p>Type: {{ table.get_type_display }}</p>
       </div>
       {% endfor %}
     </div>
