--- a/templates/access_management/login.html
+++ b/templates/access_management/login.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Аунтификация</title>
+    <title>Sign in</title>
     {% comment %} <link rel="stylesheet" href="{% static "login.css"
     %}}"> {% endcomment %}
   </head>
   <body>
     <form action="" method="POST">
-      <h1 class="login-form-title">Аунтификация</h1>
+      <h1 class="login-form-title">Sign in</h1>
       {% csrf_token %} 
       {{form}}
-      <button type="submit">Войти</button>
+      <button type="submit">Sign in</button>
     </form>
   </body>
 </html>
