--- a/templates/access_management/registration.html
+++ b/templates/access_management/registration.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up</title>
-    {% comment %} <link rel="stylesheet" href="{% static "registration.css"
-    %}}"> {% endcomment %}
+    {% comment %} <link rel="stylesheet" href="{% static "registration.css" %}}"> {% endcomment %}
   </head>
   <body>
     <form action="" method="POST">
