--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,51 +1,6 @@
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.main_page-header {
-    background-color: black;
-    color: white;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logotype {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-}
-
-.main_page-header-menu {
-    display: flex;
-    margin-left: auto;
-}
-
-.main_page-header-menu-btn {
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 10px;
-    margin: 0 10px;
-    cursor: pointer;
-    border-radius: 3px;
-}
-
-.main_page-header-menu-register-btn {
-    background-color: #D22525;
-    color: white;
-    border: none;
-    padding: 10px;
-    margin: 0 10px;
-    cursor: pointer;
-    border-radius: 3px;
-}
-
 .main_page-introduction {
     position: relative;
-    background: url('../images/main_page-introduction.jpg') center/cover no-repeat; 
+    background: url('../images/main_page-introduction.jpg') center/cover no-repeat;
     height: 400px;
     display: flex;
     flex-direction: column;
@@ -62,7 +17,7 @@ body {
 
 .main_page-introduction-btn-container {
     display: flex;
-    
+
 }
 
 .main_page-introduction-btn {
@@ -80,11 +35,13 @@ body {
 /* Updated style for the search section */
 .main_page-search {
     text-align: center;
-    margin: 40px; /* Измените отступы по своему усмотрению */
-    background-color: #FFCA7B;
+    margin: 40px;
+    /* Измените отступы по своему усмотрению */
+    background-color: #b9002b;
     padding: 40px;
     padding-bottom: 100px;
     border-radius: 10px;
+    box-shadow: 0 0 40px #ff83a0;
 }
 
 .main_page-search_title {
@@ -101,25 +58,31 @@ body {
 }
 
 .main_page-search_input {
-    width: 70%; /* Измените ширину текстового поля по своему усмотрению */
+    width: 70%;
+    /* Измените ширину текстового поля по своему усмотрению */
     padding: 15px;
     border: 1px solid #333;
     border-radius: 3px;
-    margin-right: 10px; /* Добавлен отступ справа */
-    font-family: 'Arial', sans-serif; /* Замените на ваш предпочитаемый шрифт */
-    font-size: 16px; /* Измените размер шрифта по своему усмотрению */
+    margin-right: 10px;
+    /* Добавлен отступ справа */
+    font-family: 'Arial', sans-serif;
+    /* Замените на ваш предпочитаемый шрифт */
+    font-size: 16px;
+    /* Измените размер шрифта по своему усмотрению */
     outline: none;
     border: none;
 }
 
 .main_page-search_btn {
-    background-color: #C15057;
+    background-color: #000000;
     color: white;
     border: none;
     padding: 15px 30px;
     cursor: pointer;
-    font-family: 'Arial', sans-serif; /* Замените на ваш предпочитаемый шрифт */
-    font-size: 16px; /* Измените размер шрифта по своему усмотрению */
+    font-family: 'Arial', sans-serif;
+    /* Замените на ваш предпочитаемый шрифт */
+    font-size: 16px;
+    /* Измените размер шрифта по своему усмотрению */
     border-radius: 3px;
 }
 
@@ -127,7 +90,8 @@ body {
 /* Updated style for the new products section */
 .main_page_new_products {
     text-align: center;
-    padding: 40px; /* Измените отступы по своему усмотрению */
+    padding: 40px;
+    /* Измените отступы по своему усмотрению */
 }
 
 .main_page_new_products-title {
@@ -139,12 +103,14 @@ body {
     display: flex;
     justify-content: center;
     align-content: space-between;
-    flex-wrap: wrap; /* Позволяет элементам переноситься на следующую строку при нехватке места */
+    flex-wrap: wrap;
+    /* Позволяет элементам переноситься на следующую строку при нехватке места */
 }
 
 .main_page_new_products-container div {
     box-sizing: border-box;
-    width: 300px; /* Измените ширину блока продукта по своему усмотрению */
+    width: 300px;
+    /* Измените ширину блока продукта по своему усмотрению */
     margin: 30px;
     border-radius: 10px;
     text-align: center;
@@ -156,16 +122,20 @@ body {
 }
 
 .main_page_new_products-container img {
-    max-width: 100%; /* Чтобы изображение не выходило за пределы блока */
+    max-width: 100%;
+    /* Чтобы изображение не выходило за пределы блока */
     border-radius: 5px 5px 0 0;
     margin-bottom: 10px;
 }
 
 .main_page_new_products-container h2 {
     font-size: 16px;
-    white-space: nowrap; /* Запрещает перенос строки */
-    overflow: hidden; /* Скрывает избыточный текст, который не помещается в блок */
-    text-overflow: ellipsis; /* Добавляет многоточие, когда текст обрезается */
+    white-space: nowrap;
+    /* Запрещает перенос строки */
+    overflow: hidden;
+    /* Скрывает избыточный текст, который не помещается в блок */
+    text-overflow: ellipsis;
+    /* Добавляет многоточие, когда текст обрезается */
 }
 
 
@@ -175,7 +145,8 @@ body {
 }
 
 .main_page_new_products-container p.price {
-    color: #ff4500; /* Цвет цены, можно изменить на свой выбор */
+    color: #ff4500;
+    /* Цвет цены, можно изменить на свой выбор */
     font-weight: bold;
 }
 
@@ -196,7 +167,8 @@ body {
 /* Style for the news section */
 .main_page_news {
     text-align: center;
-    padding: 40px; /* Измените отступы по своему усмотрению */
+    padding: 40px;
+    /* Измените отступы по своему усмотрению */
 }
 
 .main_page_news-title {
@@ -208,12 +180,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap; /* Позволяет элементам переноситься на следующую строку при нехватке места */
+    flex-wrap: wrap;
+    /* Позволяет элементам переноситься на следующую строку при нехватке места */
 }
 
 .main_page_news-container div {
     box-sizing: border-box;
-    width: 300px; /* Измените ширину блока новости по своему усмотрению */
+    width: 300px;
+    /* Измените ширину блока новости по своему усмотрению */
     padding: 20px;
     margin: 20px;
     border: 1px solid #ccc;
@@ -222,7 +196,8 @@ body {
 }
 
 .main_page_news-container img {
-    max-width: 100%; /* Чтобы изображение не выходило за пределы блока */
+    max-width: 100%;
+    /* Чтобы изображение не выходило за пределы блока */
     border-radius: 5px;
     margin-bottom: 10px;
 }
@@ -236,3 +211,52 @@ body {
     font-size: 16px;
     margin-bottom: 10px;
 }
+
+/* Updated style for the footer */
+.main_page-footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+.main_page-footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.main_page-footer a:hover {
+    text-decoration: underline;
+}
+
+.footer-info {
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.footer-links a {
+    margin: 0 10px;
+}
+
+.social-icons {
+    margin-bottom: 10px;
+}
+
+.social-icon img {
+    width: 30px;
+    /* Размер иконок социальных сетей */
+    height: 30px;
+    /* Размер иконок социальных сетей */
+}
+
+.footer-copyright {
+    font-size: 12px;
+}
+
+/* Updated style for the footer */
