--- a/templates/food/catalog.html
+++ b/templates/food/catalog.html
@@ -1,28 +1,40 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Catalog</title>
-</head>
-<body>
+    <link rel="stylesheet" href="{% static "css/main_layout.css" %}"> 
+    <link rel="stylesheet" href="{% static "css/catalog.css" %}">
+  </head>
+  <body>
+    {% include "layouts/header.html" %}
 
-<h1>Food Catalog</h1>
+    <!-- HTML с использованием классов -->
+    <div class="food-catalog-container">
+      <div class="filter-form">
+        <h1>Food Catalog</h1>
+        <form method="GET" action="{% url 'catalog' %}">
+          {% csrf_token %}
+          {{form}}
+          <button type="submit">Filter</button>
+        </form>
+      </div>
 
-<form method="GET" action="{% url 'catalog' %}">
-    {{ form.as_p }}
-    <button type="submit">filter</button>
-</form>
-
-{% for food in foods %}
-    <div>
-        <img src="{{ food.photo.url }}" alt="{{ food.description }}">
+      {% for food in foods %}
+      <div class="food-card">
+        <img src="{{ food.photo.url }}" alt="{{ food.description }}" />
         <h2>{{ food.name }}</h2>
-        <p>{{ food.composition }}</p>
+        {% comment %} <p>{{ food.composition }}</p> {% endcomment %}
         <p>Price: {{ food.price }}</p>
+        <button class="food-card-btn">Buy it</button>
+      </div>
+      {% endfor %}
     </div>
-{% endfor %}
 
-</body>
+    {% include "layouts/footer.html" %}
+  </body>
 </html>
+{% comment %} <div class="table-card" onclick="redirectToReserved({{ table.id }})"> {% endcomment %}
