--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -6,28 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main</title>
     <link rel="stylesheet" href="{% static "css/main.css" %}">
+    <link rel="stylesheet" href="{% static "css/main_layout.css" %}">
   </head>
   <body>
-    <header class="main_page-header">
-      <img src="./static/images/icon.svg" alt="" class="logotype" />
-      <div class="main_page-header-menu">
-        <button class="main_page-header-menu-btn">HOME</button>
-        <button class="main_page-header-menu-btn">MENU</button>
-        <button class="main_page-header-menu-btn">ORDER</button>
-        <button class="main_page-header-menu-btn">CONTACT US</button>
-        <button class="main_page-header-menu-register-btn">Registration</button>
-      </div>
-    </header>
+    {% include "layouts/header.html" %}
     <main class="main_page-main">
       <section class="main_page-introduction">
         <p class="main_page-introduction_title">
           Food fills the soul's emptiness like nothing else
         </p>
-        <div class="main_page-introduction-btn-container">
-          <button class="main_page-introduction-btn">MENU</button>
-          <button class="main_page-introduction-btn">ORDER</button>
-          <button class="main_page-introduction-btn">RESERVATON</button>
-        </div>
+
       </section>
       <section class="main_page-search">
         <p class="main_page-search_title">
@@ -68,6 +56,6 @@
         </div>
       </seciton>
     </main>
-    <footer class="main_page-footer"></footer>
+    {% include "layouts/footer.html" %}
   </body>
 </html>
