--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,4 +1,5 @@
-<footer class="main_page-footer">
+
+{% load    %}<footer class="main_page-footer">
     <div class="social-icons">
       <a href="#" class="social-icon"
       ><img src="./static/images/icons8-facebook.svg" alt="Facebook"
