bug fix register

--- a/templates/access_management/registration.html
+++ b/templates/access_management/registration.html
@@ -15,8 +15,8 @@
       {{form.last_name}}
       {{form.username}}
       {{form.email}}
-      {{form.password}}
-      {{form.password_checking}}
+      {{form.password1}}
+      {{form.password2}}
       <button type="submit">Sign up</button>
       <a href="login" class="have-account">Do you have account? Click here</a>
     </form>
