--- a/templates/tables/tables.html
+++ b/templates/tables/tables.html
@@ -12,7 +12,7 @@
     <!-- HTML с использованием классов -->
     <div class="food-container">
       <div class="filter-form">
-        <h1>Food Catalog</h1>
+        <h1>Table Catalog</h1>
         <form method="GET" action="{% url 'tables' %}">
           {% csrf_token %}
           {{form}}
