--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -6,6 +6,7 @@
     flex-wrap: wrap;
     gap: 20px;
     margin: 40px;
+    height: 100vh;
 }
 
 /* Стили для формы фильтрации */
@@ -60,19 +61,24 @@
     background-color: black;
     color: white;
     box-shadow: 0 0 40px rgb(69, 69, 69);
+    max-height: 400px;
 }
 
 .food-card img {
-    max-width: 100%;
-    /* Чтобы изображение не выходило за пределы блока */
-    border-radius: 5px 5px 0 0;
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
     margin-bottom: 10px;
+    border-radius: 5px 5px 0 0;
 }
 
 .food-card h2 {
     font-size: 16px;
-
-    /* Добавляет многоточие, когда текст обрезается */
+    white-space: nowrap;
+    /* Запрещает перенос строки */
+    overflow: hidden;
+    /* Скрывает избыточный текст, который не помещается в блок */
+    text-overflow: ellipsis;
 }
 
 .food-card p {
