--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,13 +1,13 @@
 
 {% load    %}<footer class="main_page-footer">
     <div class="social-icons">
-      <a href="#" class="social-icon"
+      <a href="https://www.facebook.com/profile.php?id=61554641284675" class="social-icon"
       ><img src="./static/images/icons8-facebook.svg" alt="Facebook"
       /></a>
-      <a href="#" class="social-icon"
+      <a href="https://twitter.com/Cafe_Future" class="social-icon"
       ><img src="./static/images/icons8-xtwitt.svg" alt="Twitter"
       /></a>
-      <a href="#" class="social-icon"
+      <a href="https://www.instagram.com/cafe_future_/" class="social-icon"
       ><img src="./static/images/icons8-instagram.svg" alt="Instagram"
       /></a>
     </div>
