--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,5 +1,5 @@
 <header class="main_page-header">
-    <img src="./static/images/icon.svg" alt="" class="logotype" />
+    <img src="./static/images/cafe_future_logo.jpg" alt="" class="logotype" />
     <div class="main_page-header-menu">
       <a href="{% url "main" %}" class="main_page-header-menu-btn">HOME</a>
       <a href="{% url "catalog" %}" class="main_page-header-menu-btn">MENU</a>
