--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -2,13 +2,13 @@
 {% load    %}<footer class="main_page-footer">
     <div class="social-icons">
       <a href="#" class="social-icon"
-      ><img src="./static/images/icons8-facebook.svg" alt="Facebook"
+      ><img src="http://127.0.0.1:8000/static/images/icons8-facebook.svg" alt="Facebook"
       /></a>
       <a href="#" class="social-icon"
-      ><img src="./static/images/icons8-xtwitt.svg" alt="Twitter"
+      ><img src="http://127.0.0.1:8000/static/images/icons8-xtwitt.svg" alt="Twitter"
       /></a>
       <a href="#" class="social-icon"
-      ><img src="./static/images/icons8-instagram.svg" alt="Instagram"
+      ><img src="http://127.0.0.1:8000/static/images/icons8-instagram.svg" alt="Instagram"
       /></a>
     </div>
     <div>
