--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main</title>
-    <link rel="stylesheet" href="{% static "css/main.css" %}">
-    <link rel="stylesheet" href="{% static "css/main_layout.css" %}">
+    <link rel="stylesheet" href="{% static "css/main.css" %}"> <link
+    rel="stylesheet" href="{% static "css/main_layout.css" %}">
+    <script defer src="{% static "js/main.js" %}"></script>
   </head>
   <body>
     {% include "layouts/header.html" %}
@@ -15,7 +16,6 @@
         <p class="main_page-introduction_title">
           Food fills the soul's emptiness like nothing else
         </p>
-
       </section>
       <section class="main_page-search">
         <p class="main_page-search_title">
@@ -38,12 +38,21 @@
             <img src="{{ food.photo.url }}" alt="{{ food.description }}" />
             <h2>{{ food.name }}</h2>
             <p>Price: {{ food.price }}</p>
-            <button class="new_products-btn">Buy it</button>
+            {% if auth %}
+            {% if food.inBasket %}
+            <h1 style="display: block" class="added-in-basket added-in-basket-{{food.id}}">added in basket</h1>
+            <button style="display: none" class="new_products-btn"  data-food-id="{{ food.id }}" >add to basket</button>
+            {% else %}
+            <h1 style="display: none" class="added-in-basket added-in-basket-{{food.id}}">added in basket</h1>
+            <button style="display: block" class="new_products-btn"  data-food-id="{{ food.id }}" >add to basket</button>
+            {% endif %}
+            {% endif %}
           </div>
           {% endfor %}
         </div>
       </seciton>
-      {% comment %} <seciton class="main_page_news">
+      {% comment %}
+      <seciton class="main_page_news">
         <h1 class="main_page_news-title">News</h1>
         <div class="main_page_news-container">
           {% for one_news in news %}
@@ -54,7 +63,8 @@
           </div>
           {% endfor %}
         </div>
-      </seciton> {% endcomment %}
+      </seciton>
+      {% endcomment %}
     </main>
     {% include "layouts/footer.html" %}
   </body>
