add delete functional

--- a/templates/basket/index.html
+++ b/templates/basket/index.html
@@ -43,6 +43,7 @@
               +
             </button>
           </div>
+          <button data-food-id="{{basket_food.id}}" class="delete-btn">delete</button>
         </div>
         {% endfor %}
       </div>
