--- a/static/css/basket.css
+++ b/static/css/basket.css
@@ -114,3 +114,13 @@ form button {
 form button:hover {
     background-color: #218838;
 }
+
+.delete-btn {
+    width: 100px;
+    background-color: #E21837;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    height: 40px;
+    margin-top: 10px;
+}
