--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,11 +32,9 @@
     border-radius: 3px;
 }
 
-/* Updated style for the search section */
 .main_page-search {
     text-align: center;
     margin: 40px;
-    /* Измените отступы по своему усмотрению */
     background-color: #b9002b;
     padding: 40px;
     padding-bottom: 100px;
@@ -57,7 +55,7 @@
     align-items: center;
 }
 
-.main_page-search_input {
+#id_search_query {
     width: 70%;
     /* Измените ширину текстового поля по своему усмотрению */
     padding: 15px;
@@ -194,10 +192,12 @@
 }
 
 .main_page_news-container img {
-    min-width: 300px;
-    min-height: 200px;
+    max-width: 200px;
+    max-height: 200px;
     border-radius: 5px;
     margin-bottom: 10px;
+    object-fit: cover;
+
 }
 
 .main_page_news-container h2 {
@@ -262,4 +262,18 @@
     background-color: #ff4500;
 }
 
-/* Updated style for the footer */
+.search-response {
+    background-color: white;
+    width: 70%;
+    display: block;
+}
+
+.search-response {
+    margin: 0 auto;
+    margin-top: 10px;
+    text-align: start;
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+    margin-left: 130px;
+}
