--- a/templates/basket/index.html
+++ b/templates/basket/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     {% include "layouts/header.html" %}
+    <center><h1>Shopping Basket</h1></center>
+  
     <main>
-      <h1>Shopping Basket</h1>
 
       <div id="product-list">
         {% for basket_food in foods %}
@@ -47,7 +48,7 @@
         </div>
         {% endfor %}
       </div>
-      <form method="post" action="">
+      <form method="post" action="{% url "stripe" %}">
         {% csrf_token %}
         <h2>Shopping Cart</h2>
         <p>
