--- a/templates/food/food_detail.html
+++ b/templates/food/food_detail.html
@@ -23,6 +23,7 @@
         <img src="{{ food.photo.url }}" alt="{{ food.name }}" />
         <p>Composition: {{ food.composition }}</p>
         <p>Price: {{ food.price }}</p>
+        {% if auth %}
         {% if food.inBasket %}
         <h1 style="display: block" class="added-in-basket added-in-basket-{{food.id}}" data-food-id="{{ food.id }}">added in basket</h1>
         <button style="display: none" class="new_products-btn new_products-btn-{{food.id}}"  data-food-id="{{ food.id }}" >add to basket</button>
@@ -31,6 +32,7 @@
         <button style="display: block" class="new_products-btn new_products-btn-{{food.id}}"  data-food-id="{{ food.id }}" >add to basket</button>
         {% endif %}
         <!-- Add any other details you want to display -->
+        {% endif %}
         {% endblock %}
       </div>
     </main>
