--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -6,7 +6,6 @@
     flex-wrap: wrap;
     gap: 20px;
     margin: 40px;
-    height: 100vh;
 }
 
 /* Стили для формы фильтрации */
@@ -59,7 +58,7 @@
     background-color: black;
     color: white;
     box-shadow: 0 0 40px rgb(69, 69, 69);
-    max-height: 350px;
+    height: 350px;
 }
 
 .food-card img {
@@ -103,4 +102,9 @@
     width: 200px;
     margin: 20px auto;
     margin-top: 0;
+}
+
+main {
+    display: flex;
+    padding: 100px;
 }
