--- a/static/css/tables.css
+++ b/static/css/tables.css
@@ -61,7 +61,7 @@
     background-color: black;
     color: white;
     box-shadow: 0 0 40px rgb(69, 69, 69);
-    max-height: 300px;
+    height: 350px;
 }
 
 .table-card img {
@@ -69,6 +69,8 @@
     /* Чтобы изображение не выходило за пределы блока */
     border-radius: 5px 5px 0 0;
     margin-bottom: 10px;
+    height: 200px;
+    object-fit: cover;
 }
 
 .table-card h2 {
@@ -96,4 +98,9 @@
     width: 150px;
     margin: 20px auto;
     margin-top: 0;
+}
+
+main {
+    display: flex;
+    padding: 100px;
 }
