--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,17 +1,25 @@
-
-{% load    %}<footer class="main_page-footer">
-    <div class="social-icons">
-      <a href="#" class="social-icon"
-      ><img src="http://127.0.0.1:8000/static/images/icons8-facebook.svg" alt="Facebook"
-      /></a>
-      <a href="#" class="social-icon"
-      ><img src="http://127.0.0.1:8000/static/images/icons8-xtwitt.svg" alt="Twitter"
-      /></a>
-      <a href="#" class="social-icon"
-      ><img src="http://127.0.0.1:8000/static/images/icons8-instagram.svg" alt="Instagram"
-      /></a>
-    </div>
-    <div>
-      <p>&copy;2023 Your company. All rights reserved.</p>
-    </div>
-  </footer>
+{% load %}
+<footer class="main_page-footer">
+  <div class="social-icons">
+    <a href="https://www.instagram.com/cafe_future_/" class="social-icon"
+      ><img
+        src="http://127.0.0.1:8000/static/images/icons8-facebook.svg"
+        alt="Facebook"
+    /></a>
+    <a href="https://twitter.com/Cafe_Future" class="social-icon"
+      ><img
+        src="http://127.0.0.1:8000/static/images/icons8-xtwitt.svg"
+        alt="Twitter"
+    /></a>
+    <a
+      href="https://www.facebook.com/profile.php?id=61554641284675"
+      class="social-icon"
+      ><img
+        src="http://127.0.0.1:8000/static/images/icons8-instagram.svg"
+        alt="Instagram"
+    /></a>
+  </div>
+  <div>
+    <p>&copy;2023 Your company. All rights reserved.</p>
+  </div>
+</footer>
