--- a/templates/stripe_payment/index.html
+++ b/templates/stripe_payment/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pay with stripe</title>
-    <script defer src="https://js.stripe.com/v3/"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <link
       rel="stylesheet"
       href="{% static 'main/bootstrap/css/bootstrap.min.css' %}"
